# factorio-server

./: BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  config-path.cfg  generate_map_test.sh  map-gen-settings.json  map-settings.json  renovate.json  repos.bzl  server-settings.json  test.sh  test_create_map.sh
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  renovate.yml  test.yml
