module(name = "factorio_server")

bazel_dep(name = "rules_oci", version = "2.2.7")
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:8c1a496b055d36c222e95ebd5c53bdd1fee447689a97ad889febca8380d578ec",
    image = "gcr.io/distroless/cc",
    platforms = ["linux/amd64"],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64")

bazel_dep(name = "rules_pkg", version = "1.2.0")

repos = use_extension("//:repos.bzl", "repos_bzlmod")
use_repo(
    repos,
    "factorio_headless_release",
)
