module(name = "factorio_server")

bazel_dep(name = "rules_oci", version = "2.3.0")
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:e1cc90d06703f5dc30ae869fbfce78fce688f21a97efecd226375233a882e62f",
    image = "gcr.io/distroless/cc",
    platforms = ["linux/amd64"],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64")

bazel_dep(name = "rules_pkg", version = "1.2.0")

repos = use_extension("//:repos.bzl", "repos_bzlmod")
use_repo(
    repos,
    "factorio_headless_release",
)
