module(name = "factorio_server")

bazel_dep(name = "rules_oci", version = "2.3.0")
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:56aaf20ab2523a346a67c8e8f8e8dabe447447d0788b82284d14ad79cd5f93cc",
    image = "gcr.io/distroless/cc",
    platforms = ["linux/amd64"],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64")

bazel_dep(name = "rules_pkg", version = "1.2.0")

repos = use_extension("//:repos.bzl", "repos_bzlmod")
use_repo(
    repos,
    "factorio_headless_release",
)
